[package]
name = "linux-personality"
version = "2.0.0"
authors = ["Jean Pierre Dudey <me@jeandudey.tech>"]
description = "Wrapper around Linux personality function."
repository = "https://github.com/jeandudey/linux-personality"
readme = "README.md"
keywords = ["linux", "posix", "personality", "ffi"]
license = "MIT"

[dependencies]
libc = "0.2"
bitflags = "2"
